<resources>
    <string name="app_name">TableOrder</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name: </string>
    <string name="type">Type: </string>
    <string name="price">Price: </string>
    <string name="discount">Discount: (%) </string>
    <string name="floorNo">Floor No: </string>
    <string name="TableNo">Table No: </string>
    <string name="tableCapacity">Capacity: </string>
    <string name="delete">Delete</string>
    <string name="size">Size: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>