<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp">

    <ImageView
        android:id="@+id/Table"
        android:layout_width="98dp"
        android:layout_height="69dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:padding="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/TableNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/Table"
        android:layout_toRightOf="@+id/Table"
        android:text="Table No"
        android:textAlignment="gravity"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/FloorNo" />

    <TextView
        android:id="@+id/Capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/TableNo"
        android:layout_toRightOf="@+id/TableNo"
        android:text="Capacity"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/TableNo"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/FloorNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/Capacity"
        android:layout_toRightOf="@+id/Capacity"
        android:text="FloorNo"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/TableNo"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/floorNo"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/FloorNo"
        app:layout_constraintStart_toEndOf="@+id/Table"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/TableNo"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/Table"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/tableCapacity"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/Table"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="-----------------------------------------------------------"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Table" />
</androidx.constraintlayout.widget.ConstraintLayout>